hw02/hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "test-hellox.dyn.cloud.e-infra.cz"
      secretName: test-hello-dyn-cloud-e-infra-cz-tls
  rules:
    - host: "test-hellox.dyn.cloud.e-infra.cz"
      http:
        paths:
          - backend:
              service:
                name: hello-kubernetes-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
